// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputModal API onSubmit should NOT be called 1`] = `
<TextInputModal
  ariaLabel="input text"
  isOpen={true}
  onCancel={[Function]}
  onSubmit={[Function]}
  title=""
>
  <Modal
    actions={
      Array [
        <Button
          data-action="cancel"
          onClick={[Function]}
          variant="secondary"
        >
          Cancel
        </Button>,
        <Button
          data-action="confirm"
          onClick={[Function]}
          variant="primary"
        >
          Save
        </Button>,
      ]
    }
    appendTo={[Function]}
    aria-describedby=""
    aria-label="input text - modal"
    aria-labelledby=""
    className="ins-c-inventory__detail--edit"
    hasNoBodyWrapper={false}
    isOpen={true}
    onClose={[Function]}
    ouiaSafe={true}
    showClose={true}
    title=""
    titleIconVariant={null}
    titleLabel=""
    variant="small"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-5"
                aria-label="input text - modal"
                aria-labelledby="pf-modal-part-3"
                aria-modal="true"
                class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
                data-ouia-component-id="OUIA-Generated-Modal-small-4"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-3"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
                
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-5"
                >
                  <input
                    aria-invalid="false"
                    aria-label="input text"
                    class="pf-c-form-control"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    type="text"
                    value=""
                  />
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-action="cancel"
                    data-ouia-component-id="OUIA-Generated-Button-secondary-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-primary"
                    data-action="confirm"
                    data-ouia-component-id="OUIA-Generated-Button-primary-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Save
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <ModalContent
        actions={
          Array [
            <Button
              data-action="cancel"
              onClick={[Function]}
              variant="secondary"
            >
              Cancel
            </Button>,
            <Button
              data-action="confirm"
              onClick={[Function]}
              variant="primary"
            >
              Save
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label="input text - modal"
        aria-labelledby=""
        boxId="pf-modal-part-3"
        className="ins-c-inventory__detail--edit"
        descriptorId="pf-modal-part-5"
        hasNoBodyWrapper={false}
        isOpen={true}
        labelId="pf-modal-part-4"
        onClose={[Function]}
        ouiaId="OUIA-Generated-Modal-small-4"
        ouiaSafe={true}
        showClose={true}
        title=""
        titleIconVariant={null}
        titleLabel=""
        variant="small"
      >
        <Backdrop>
          <div
            className="pf-c-backdrop"
          >
            <FocusTrap
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                }
              }
              paused={false}
              preventScrollOnDeactivate={false}
            >
              <div
                className="pf-l-bullseye"
              >
                <ModalBox
                  aria-describedby="pf-modal-part-5"
                  aria-label="input text - modal"
                  aria-labelledby="pf-modal-part-3"
                  className="ins-c-inventory__detail--edit"
                  data-ouia-component-id="OUIA-Generated-Modal-small-4"
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe={true}
                  id="pf-modal-part-3"
                  style={Object {}}
                  variant="small"
                >
                  <div
                    aria-describedby="pf-modal-part-5"
                    aria-label="input text - modal"
                    aria-labelledby="pf-modal-part-3"
                    aria-modal="true"
                    className="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
                    data-ouia-component-id="OUIA-Generated-Modal-small-4"
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-3"
                    role="dialog"
                    style={Object {}}
                  >
                    <ModalBoxCloseButton
                      onClose={[Function]}
                    >
                      <Button
                        aria-label="Close"
                        className=""
                        onClick={[Function]}
                        variant="plain"
                      >
                        <ButtonBase
                          aria-label="Close"
                          className=""
                          innerRef={null}
                          onClick={[Function]}
                          variant="plain"
                        >
                          <button
                            aria-disabled={false}
                            aria-label="Close"
                            className="pf-c-button pf-m-plain"
                            data-ouia-component-id="OUIA-Generated-Button-plain-4"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[Function]}
                            role={null}
                            type="button"
                          >
                            <TimesIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 352 512"
                                width="1em"
                              >
                                <path
                                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                />
                              </svg>
                            </TimesIcon>
                          </button>
                        </ButtonBase>
                      </Button>
                    </ModalBoxCloseButton>
                    <ModalBoxBody
                      id="pf-modal-part-5"
                    >
                      <div
                        className="pf-c-modal-box__body"
                        id="pf-modal-part-5"
                      >
                        <TextInput
                          aria-label="input text"
                          onChange={[Function]}
                          type="text"
                          value=""
                        >
                          <TextInputBase
                            aria-label="input text"
                            className=""
                            innerRef={null}
                            isDisabled={false}
                            isLeftTruncated={false}
                            isReadOnly={false}
                            isRequired={false}
                            onChange={[Function]}
                            ouiaSafe={true}
                            type="text"
                            validated="default"
                            value=""
                          >
                            <input
                              aria-invalid={false}
                              aria-label="input text"
                              className="pf-c-form-control"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                              data-ouia-component-type="PF4/TextInput"
                              data-ouia-safe={true}
                              disabled={false}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              readOnly={false}
                              required={false}
                              type="text"
                              value=""
                            />
                          </TextInputBase>
                        </TextInput>
                      </div>
                    </ModalBoxBody>
                    <ModalBoxFooter>
                      <footer
                        className="pf-c-modal-box__footer"
                      >
                        <Button
                          data-action="cancel"
                          key="cancel"
                          onClick={[Function]}
                          variant="secondary"
                        >
                          <ButtonBase
                            data-action="cancel"
                            innerRef={null}
                            onClick={[Function]}
                            variant="secondary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-secondary"
                              data-action="cancel"
                              data-ouia-component-id="OUIA-Generated-Button-secondary-4"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              onClick={[Function]}
                              role={null}
                              type="button"
                            >
                              Cancel
                            </button>
                          </ButtonBase>
                        </Button>
                        <Button
                          data-action="confirm"
                          key="confirm"
                          onClick={[Function]}
                          variant="primary"
                        >
                          <ButtonBase
                            data-action="confirm"
                            innerRef={null}
                            onClick={[Function]}
                            variant="primary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-primary"
                              data-action="confirm"
                              data-ouia-component-id="OUIA-Generated-Button-primary-4"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              onClick={[Function]}
                              role={null}
                              type="button"
                            >
                              Save
                            </button>
                          </ButtonBase>
                        </Button>
                      </footer>
                    </ModalBoxFooter>
                  </div>
                </ModalBox>
              </div>
            </FocusTrap>
          </div>
        </Backdrop>
      </ModalContent>
    </Portal>
  </Modal>
</TextInputModal>
`;

exports[`TextInputModal render should render aria label 1`] = `
<Modal
  actions={
    Array [
      <Button
        data-action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
      <Button
        data-action="confirm"
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label="Some aria label - modal"
  aria-labelledby=""
  className="ins-c-inventory__detail--edit"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <TextInput
    aria-label="Some aria label"
    onChange={[Function]}
    type="text"
    value=""
  />
</Modal>
`;

exports[`TextInputModal render should render open 1`] = `
<Modal
  actions={
    Array [
      <Button
        data-action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
      <Button
        data-action="confirm"
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label="input text - modal"
  aria-labelledby=""
  className="ins-c-inventory__detail--edit"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <TextInput
    aria-label="input text"
    onChange={[Function]}
    type="text"
    value=""
  />
</Modal>
`;

exports[`TextInputModal render should render title 1`] = `
<Modal
  actions={
    Array [
      <Button
        data-action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
      <Button
        data-action="confirm"
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label="input text - modal"
  aria-labelledby=""
  className="ins-c-inventory__detail--edit"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Some title"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <TextInput
    aria-label="input text"
    onChange={[Function]}
    type="text"
    value=""
  />
</Modal>
`;

exports[`TextInputModal render should render without any props 1`] = `
<Modal
  actions={
    Array [
      <Button
        data-action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
      <Button
        data-action="confirm"
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label="input text - modal"
  aria-labelledby=""
  className="ins-c-inventory__detail--edit"
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <TextInput
    aria-label="input text"
    onChange={[Function]}
    type="text"
  />
</Modal>
`;
